Ensure title wraps for very long words

--- a/packages/social-previews/src/facebook-preview/style.scss
+++ b/packages/social-previews/src/facebook-preview/style.scss
@@ -133,6 +133,7 @@
 	.facebook-preview__title {
 		margin-bottom: 5px;
 		max-height: 110px;
+		overflow-wrap: break-word;
 	}
 
 	.facebook-preview__url {
